# Scandium

./: .gitignore  INSTALL  LICENSE  Makefile.am  README  README.md  configure  configure.ac
annotation_database/: addToHg38DB.pl  dumpExonAnnotationFromIndividualSource.pl  exonAnnotations.pl  exonAnnotations_hg19.pl  exonAnnotations_liftover.pl  exonAnnotations_liftover_hg19.pl  exon_annotation_databases.sh  extractIntrons.py  fetchGeneCDSCoords.pl  forIntronicRegions.pl  forIntronicRegions_hg19.pl  geneExonAnnotation.pl  geneExonAnnotationForBatchAnalysis.pl  geneExonAnnotation_eMerge.pl  geneExonAnnotation_hg19.pl  geneExonAnnotation_liftover.pl  generate_bed_file.pl  generate_bed_file.py  generate_refseq_exon_bed.py  generate_refseq_exon_bed_for_liftover.py  getTranscripts.py  intron_annotation_databases.sh  populate_Regions_with_no_annotation.pl  processHGNCtoDB.pl  processHGNCtoDB_hg19.pl  processMANEtoDB.pl  rearrange_miRNA_bed.py  refseq_exon_annotation_databases.sh  renameRefSeq.pl  setup_exon_annotation_databases.sh  setup_exon_annotation_databases_hg19.sh  setup_gene_annotation_database.sh  setup_gene_coords_databases.sh  setup_intron_annotation_databases.sh  setup_intron_annotation_databases_hg19.sh  setup_refseq_exon_annotation_databases.sh  setup_refseq_exon_annotation_databases_for_liftover.sh  (+3 more)
lib/: Makefile.am  coverage_tracking.c  coverage_tracking.h  data_structure.h  utility.c  utility.h
src/: Makefile.am  main.c  reports.c  stats.c  user_defined_annotation.c  user_inputs.c  utils.c
src/batch_analysis/: Batch_Analysis.sh
src/batch_analysis/src/: Makefile  annotation.cpp  annotation.hpp  hts_data.hpp  main.cpp  user_inputs.cpp  user_inputs.hpp  utils.cpp
src/sequenceStats/: Makefile  annotation.c  annotation.h  for_mysql.c  for_mysql.h  main.c  reports.c  reports.h  stats.c  stats.h  targets.c  targets.h  terms.h  user_defined_annotation.c  user_defined_annotation.h  user_inputs.c  user_inputs.h  utils.c  utils.h
src/uniformity_graphing/: Makefile  coverage.hpp  graphing.cpp  user_inputs.cpp  user_inputs.hpp  utils.cpp  utils.hpp
(+172 files in other folders)
